<resources>
    // Common
    <string name="empty_txt"> </string>
    <string name="ad">Ad</string>
    <string name="btn_ok">OK</string>
    <string name="agree">Agree</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="next">Next</string>
    <string name="ad_loading">Ad Loading</string>
    <string name="go_settings">Go to settings</string>
    <string name="txt_noti_ads">This action may contain ad</string>
    <string name="title_app_name">Artsal</string>
    <string name="body_welcome">Enhance and personalize your photos with intuitive tools made for everyone.</string>
    <string name="title_welcome">Effortless editing with simple touches</string>
    <string name="select_language">Please select a language</string>
    <string name="txt_privacy_first">By tapping “Get started”, you agree with our</string>
    <string name="txt_privacy_second">Privacy Policy.</string>
    <string name="get_started">Get Started</string>
    <string name="title_onboarding2">Beautiful templates for each memories</string>
    <string name="body_onboarding2">Thousands of frames, templates, and collages made for memories.</string>
    <string name="txt_question">When do you usually take family photos?</string>
    <string name="txt_description">Your feedback will help us personalize your experience.</string>
    <string name="download">download</string>
    <string name="btn_download">Download</string>
    <string name="title_assetspack">myassets</string>
    <string name="nav_template">Templates</string>
    <string name="nav_collage">Collage</string>
    <string name="nav_my_photo">My photos</string>
    <string name="save">Save</string>
    <string name="edit_photo">Edit photo</string>
    <string name="border">Border</string>
    <string name="background">Background</string>
    <string name="text">Text</string>
    <string name="sticker">Sticker</string>
    <string name="add_text">Add text</string>
    <string name="keyboard">Keyboard</string>
    <string name="style">Style</string>
    <string name="message_sticker_limit">You can only add up to 30 stickers</string>
    <string name="message_limit_text">You can only add up to 6 texts</string>
    <string name="result">Result</string>
    <string name="txt_result">Ready to share</string>
    <string name="txt_body_result">The photo is saved successfully. Share it to your family and friends now!</string>
    <string name="share_to">Share to</string>
    <string name="facebook">Facebook</string>
    <string name="instagram">Instagram</string>
    <string name="messenger">Messenger</string>
    <string name="twitter">x</string>
    <string name="more">More</string>
    <string name="not_found_bitmap">No image to save</string>
    <string name="save_success">Save Success</string>
    <string name="save_failure">Save Failure</string>
    <string name="cannot_build_image">Cannot build image</string>
    <string name="swap">Swap</string>
    <string name="crop">Crop</string>
    <string name="replace">Replace</string>
    <string name="filter">Filter</string>
    <string name="ai_enhance">AI Edit    </string>
    <string name="please_select_another_photo_to_swap">Please select another photo to swap</string>
    <string name="message_select_image">Select the image you want to swap with the current image</string>
    <string name="mes_select_same_image">Please select another photo to swap</string>
    <string name="moody">Moody</string>
    <string name="nature">Nature</string>
    <string name="portrait">Portrait</string>
    <string name="lifestyle">Lifestyle</string>
    <string name="landscape">Landscape</string>
    <string name="cinematic">Cinematic</string>
    <string name="black_and_white"><![CDATA[B & W]]></string>
    <string name="rotate">Rotate</string>
    <string name="custom">Custom</string>
    <string name="settings">Settings</string>
    <string name="setting_language">Language</string>
    <string name="setting_feedback">Feedback</string>
    <string name="rate_us">Rate us</string>
    <string name="setting_share_app">Share app</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="recent">Recent</string>
    <string name="view_all">View All</string>
    <string name="collages">Collages</string>
    <string name="all_photos">All Photos</string>
    <string name="txt_empty_image">No photo yet.\n Create new photo with family now!</string>
    <string name="created">Created</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>

    <string-array name="config_type_app">
        <item>All</item>
        <item>2 photos</item>
        <item>3 photos</item>
        <item>4 photos</item>
        <item>5 photos</item>
    </string-array>
    <string name="noti_pick_images">Please select</string>
    <string name="date_created">Created</string>
    <string name="are_you_sure_you_want_to_delete_this_photo">Are you sure you want to delete this photo?</string>
    <string name="permission_denied_cannot_load_images">Permission denied. Cannot load images.</string>
    <string name="please_select_images">Please select</string>
    <string name="images">images</string>
    <string name="birthday">Birthday</string>
    <string name="wedding">Wedding</string>
    <string name="milestone">Milestone</string>
    <string name="graduation">Graduation</string>
    <string name="gathering">Gathering</string>
    <string name="family_trip">Family Trip</string>
    <string name="anniversary">Anniversary</string>
    <string name="holiday">Holiday</string>
    <string name="tab_all_photos">All</string>
    <string name="tab_2_photos">2 photos</string>
    <string name="tab_3_photos">3 photos</string>
    <string name="tab_4_photos">4 photos</string>
    <string name="tab_5_photos">5 photos</string>
    <string name="done">Done</string>
    <string name="image_not_found_in_system">Image not found in system</string>
    <string name="error_while_deleting_photo">Error while deleting photo:</string>
    <string name="unable_to_delete_photo_you_denied_permission">Unable to delete photo - you denied permission</string>
    <string name="permission_title">Grant access</string>
    <string name="rationale_access_photo">The app needs photo access to perform this function. Do you want to grant permission?</string>
    <string name="enable_permission_access_photo">You have denied photo access. Please go to Settings to grant permission.</string>
    <string name="ic_nav_template">Template</string>
    <string name="category">Category</string>
    <string name="holidays">Holidays</string>
    <string name="all">All</string>
    <string name="birthdays">Birthdays</string>
    <string name="special_days">Special days</string>
    <string name="trending">Trending</string>
    <string name="tab_special_days">Special days</string>
    <string name="tab_birthdays">Birthdays</string>
    <string name="tab_trending">Trending</string>
    <string name="travel">Travel</string>
    <string name="seasons">Seasons</string>
    <string name="milestones">Milestones</string>
    <string name="moments">Moments</string>
    <string name="adjust">Adjust</string>
    <string name="loading_ad">Loading ad ...</string>
    <string name="templates">Templates</string>
    <string name="select_photo">Select photo</string>
    <string name="please_add_image_to_save">Please add image to save</string>
    <string name="selected_images">Selected %1$d/%2$d images</string>
    <string name="you_have_selected_enough_photos">You have selected enough photos</string>
    <string name="please_select_an_option_to_continue">Please select an option to continue</string>
    <string name="title_blank_canvas">This feature will be available soon.\n\nNow, explore our collage tool or dive into ready-made templates to spark your creativity!</string>
    <string name="try_collage">Try collage</string>
    <string name="use_templates">Use templates</string>
    <string name="content_rate_default">Thanks for using our app!</string>
    <string name="enjoying_your_experience_let_us_know_how_we_re_doing_it_only_takes_a_few_seconds">Enjoying your experience? Let us know how we’re doing—it only takes a few seconds.</string>
    <string name="content_rate_unhappy">Oh.. we missed the mark</string>
    <string name="body_rate_unhappy">We’d love to make things better—tell us what went wrong.</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create_collage">Create a Collage</string>
    <string name="template">Template</string>
    <string name="blank_canvas">Blank Canvas</string>
    <string name="quickly_create_with_npre_made_designs">Quickly create with \npre-made designs</string>
    <string name="total_creative_freedom">Total creative freedom</string>
    <string name="collage">Collage</string>
    <string name="change_style">Change Style</string>
    <string name="choose_style">Choose style</string>
    <string name="additional_description_optional">Additional description (Optional)</string>
    <string name="ex_adding_a_sunset_beautifying_the_face">Describe your idea, such as adding a sunset...</string>
    <string name="generate">Generate</string>
    <string name="remove_or_replace_background">Remove or replace background</string>
    <string name="change_portrait_lighting_according_to_prompt">Change portrait lighting according to prompt</string>
    <string name="story_comic">Story Comic</string>
    <string name="relight">Relight</string>
    <string name="enter_your_storyline_example_a_dragon_warrior_searches_for_a_magical_gem_in_an_ancient_neon_forest">Enter your storyline... (Example: A dragon warrior searches for a magical gem in an ancient neon forest)</string>
    <string name="frame_number">Frame number:</string>
    <string name="multil_page">Multil Page</string>
    <string name="prompt">Prompt</string>
    <string name="_2_pages">2 pages</string>
    <string name="_3_pages">3 pages</string>
    <string name="_3_frames">3 frames</string>
    <string name="_4_frames">4 frames</string>
    <string name="top">Top</string>
    <string name="ai_generate">AI Generate</string>
    <string name="share_your_amazing_photo_to_friends_now">Share your amazing photo to friends now!</string>
    <string name="tap_to_select_a_photo_from_your_gallery">Tap to select a photo from your gallery</string>
    <string name="light_prompt">Light Prompt</string>
    <string name="output_quality">Output Quality</string>
    <string name="steps">Steps</string>
    <string name="cfg_scale">CFG Scale</string>
    <string name="describe_your_light_idea">Describe your light idea</string>
    <string name="remove">Remove</string>
    <string name="add_new_background">Add new background</string>
    <string name="feather">Feather</string>
    <string name="shadow">Shadow</string>
    <string name="describe_your_story_e_g_a_dragon_warrior_searches_for_a_magical_gem_in_an_ancient_neon_forest">Describe your story \nE.g. A dragon warrior searches for a magical gem in an ancient neon forest</string>
    <string name="page_number">Page number:</string>
    <string name="result_pages">Result (%1$d pages)</string>
    <string name="upscale">Upscale</string>
    <string name="enhance">Enhance</string>
    <string name="beautify">Beautify</string>
</resources>