<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvQuestion"
        style="@style/BaseTheme.TextExtraBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_30"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="2"
        android:text="@string/txt_question"
        android:textColor="#222222"
        android:textSize="@dimen/sp_20"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvDescription"
        style="@style/BaseTheme.TextRegular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_12"
        android:ellipsize="end"
        android:gravity="center"
        android:maxLines="1"
        android:text="@string/txt_description"
        android:textColor="#5C5C5C"
        android:textSize="@dimen/sp_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvQuestion" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_12"
        app:layout_constraintBottom_toTopOf="@+id/tvNext"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvDescription">

        <GridLayout
            android:id="@+id/gvHabits"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:columnCount="2"
            android:rowCount="4">

            <com.asoft.artsal.photo.customview.HabitsView
                android:id="@+id/birthday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginEnd="@dimen/dp_6"
                android:layout_marginBottom="@dimen/dp_6"
                app:imgHabit="@drawable/ic_birthday"
                app:nameHabit="@string/birthday" />

            <com.asoft.artsal.photo.customview.HabitsView
                android:id="@+id/holiday"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_6"
                app:imgHabit="@drawable/ic_holiday"
                app:nameHabit="@string/holiday" />

            <com.asoft.artsal.photo.customview.HabitsView
                android:id="@+id/anniversary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="0"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_16"
                app:imgHabit="@drawable/ic_anniversary"
                app:nameHabit="@string/anniversary" />

            <com.asoft.artsal.photo.customview.HabitsView
                android:id="@+id/family_trip"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="1"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_6"
                android:layout_marginBottom="@dimen/dp_6"
                app:imgHabit="@drawable/ic_family_trip"
                app:nameHabit="@string/family_trip" />

            <com.asoft.artsal.photo.customview.HabitsView
                android:id="@+id/gathering"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_6"
                android:layout_marginBottom="@dimen/dp_6"
                app:imgHabit="@drawable/ic_gathering"
                app:nameHabit="@string/gathering" />

            <com.asoft.artsal.photo.customview.HabitsView
                android:id="@+id/graduation"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_16"
                app:imgHabit="@drawable/ic_graduation"
                app:nameHabit="@string/graduation" />

            <com.asoft.artsal.photo.customview.HabitsView
                android:id="@+id/milestone"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="3"
                android:layout_column="0"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/dp_16"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_6"
                app:imgHabit="@drawable/ic_milestone"
                app:nameHabit="@string/milestone" />

            <com.asoft.artsal.photo.customview.HabitsView
                android:id="@+id/wedding"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_row="2"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_marginStart="@dimen/dp_6"
                android:layout_marginTop="@dimen/dp_6"
                android:layout_marginEnd="@dimen/dp_16"
                android:layout_marginBottom="@dimen/dp_6"
                app:imgHabit="@drawable/ic_wedding"
                app:nameHabit="@string/wedding" />

        </GridLayout>
    </ScrollView>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tvNext"
        style="@style/BaseTheme.TextSemiBold"
        android:layout_width="@dimen/dp_68"
        android:layout_height="@dimen/dp_32"
        android:layout_marginTop="@dimen/dp_12"
        android:layout_marginEnd="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_24"
        android:background="@drawable/bg_button"
        android:text="@string/next"
        android:alpha="0.3"
        android:textColor="@color/txt_normal"
        android:textSize="@dimen/sp_15"
        app:layout_constraintBottom_toTopOf="@id/frameNative"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <include
        android:id="@+id/frameNative"
        layout="@layout/layout_native_control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>