<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tool="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgBg"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintDimensionRatio="H,360:541"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tool:src="@drawable/img_welcome" />


    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/title_welcome"
        style="@style/BaseTheme.TextExtraBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="-20dp"
        android:gravity="center"
        android:text="@string/title_welcome"
        android:textColor="#222222"
        android:textSize="@dimen/sp_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgBg" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/body_welcome"
        style="@style/BaseTheme.TextRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_16"
        android:gravity="center"
        android:text="@string/body_welcome"
        android:textColor="#5C5C5C"
        android:textSize="@dimen/sp_14"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/title_welcome" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnStarted"
        style="@style/BaseTheme.TextSemiBold"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_30"
        android:layout_marginTop="32dp"
        android:background="@drawable/bg_button"
        android:fontFamily="@font/public_sans_semibold"
        android:padding="@dimen/dp_10"
        android:text="@string/get_started"
        android:textAllCaps="false"
        android:textColor="#222222"
        android:textSize="@dimen/sp_16"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/body_welcome" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrivacyFirst"
        style="@style/BaseTheme.TextRegular"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/dp_16"
        android:layout_marginBottom="@dimen/dp_40"
        android:gravity="center"
        android:text="@string/txt_privacy_first"
        android:textColor="#B3222222"
        android:textSize="@dimen/sp_12"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/tvPrivacyFirst"
        app:layout_constraintHorizontal_chainStyle="packed" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tvPrivacySecond"
        style="@style/BaseTheme.TextRegular"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/dp_16"
        android:gravity="start"
        android:text="@string/txt_privacy_second"
        android:textColor="#B3222222"
        android:textSize="@dimen/sp_12"
        app:layout_constraintStart_toStartOf="@id/tvPrivacyFirst"
        app:layout_constraintTop_toBottomOf="@id/tvPrivacyFirst"
        app:layout_constraintEnd_toEndOf="@id/tvPrivacyFirst"
        />


</androidx.constraintlayout.widget.ConstraintLayout>